# ResearchRAG-AI-Powered-Research-Paper-Assistant

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Directory.Build.props  Dockerfile  ResearchRag.sln  migration-preview.sql
backend/ResearchRag.Api/: Program.cs  ResearchRag.Api.csproj  appsettings.json
backend/ResearchRag.Api/Controllers/: AdminController.cs  ApiControllerBase.cs  AuthController.cs  ChatsController.cs  DashboardController.cs  DocumentsController.cs  ResearchController.cs  SearchController.cs  WorkspacesController.cs
backend/ResearchRag.Application/: ResearchRag.Application.csproj
backend/ResearchRag.Application/Abstractions/: IAuthTokenService.cs  IDocumentProcessorClient.cs  (+9 more)
backend/ResearchRag.Infrastructure/: DependencyInjection.cs  ResearchRag.Infrastructure.csproj
backend/ResearchRag.Tests/: AuthRefreshTests.cs  CitationFactoryTests.cs  HashEmbeddingProviderTests.cs  HybridScoreMergerTests.cs  ResearchAnalysisServiceTests.cs  ResearchRag.Tests.csproj
deploy/: Caddyfile
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  styles.css  types.ts
worker/: .dockerignore  Dockerfile  pyproject.toml
worker/src/researchrag_worker/: __init__.py  __main__.py  chunking.py  config.py  embeddings.py  extraction.py  llm.py  metadata.py  pdf.py  sections.py  worker.py
worker/tests/: test_chunking.py  test_embeddings.py  test_extraction.py  test_metadata.py  test_sections.py
(+65 files in other folders)
