[project]
name = "researchrag-worker"
version = "0.1.0"
description = "ResearchRAG document processing worker"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
runtime = [
  "PyMuPDF>=1.24.14",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.1",
  "pymysql>=1.1.1",
  "qdrant-client>=1.12.1",
  "sqlalchemy>=2.0.36"
]
dev = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["researchrag_worker"]
omit = [
  "src/researchrag_worker/__main__.py",
  "src/researchrag_worker/config.py",
  "src/researchrag_worker/pdf.py",
  "src/researchrag_worker/worker.py"
]
